languages/montiarc-fe/src/test/resources/unused/contextconditions/invalid/LowerCaseEnumeration.cd_
package contextconditions.invalid;

// TODO: Unused?
classdiagram LowerCaseEnumeration {
  enum lowerCaseEnumeration {A, B, C;} // lower case name
}